--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,7 +5,7 @@
     <head>
         <title>Gerenciador de Metas</title>
         <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <head>
+    </head>
     <body>
         <div class="page-header" style="text-align: center">
             <h1>Gerenciador de Metas</h1>
